[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventquant-backtesting"
version = "0.1.0"
description = "Backtesting helpers for the EventQuant Kalshi markets API."
readme = { file = "sdk/README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]
license = { text = "Proprietary" }
authors = [{ name = "EventQuant" }]
keywords = ["kalshi", "markets", "backtesting", "candlesticks", "eventquant"]

[project.optional-dependencies]
ml = [
  "pandas>=1.5",
  "tqdm>=4.0",
  "scikit-learn>=1.2",
  "torch>=2.0",
]
dev = ["build>=1.2.1", "twine>=5.0.0"]

[project.urls]
Homepage = "https://www.api.eventquant.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]
